[gd_scene load_steps=3 format=3 uid="uid://ipqn6c3kseo2"]

[ext_resource type="Script" path="res://godot/scr/spaceBackgroundGenerator.gd" id="1_yb6n2"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_5hbrt"]

[node name="spaceBgGen" type="Node2D"]
process_priority = 1
script = ExtResource("1_yb6n2")

[node name="spacePllxMngr" type="Node2D" parent="."]

[node name="spaceBgPllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.1, 0.1)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(6700, 7000)

[node name="spaceBgTex" type="Sprite2D" parent="spacePllxMngr/spaceBgPllx"]
modulate = Color(0.101961, 0, 0.101961, 1)
scale = Vector2(5, 5)
texture = SubResource("PlaceholderTexture2D_5hbrt")

[node name="spaceGPllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.2, 0.2)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(6700, 7000)

[node name="spaceGasTex" type="Sprite2D" parent="spacePllxMngr/spaceGPllx"]
modulate = Color(0.384314, 0, 0.352941, 1)
z_index = 7
scale = Vector2(5, 5)

[node name="spaceG1Pllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.4, 0.4)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(6700, 7000)

[node name="spaceGasTex1" type="Sprite2D" parent="spacePllxMngr/spaceG1Pllx"]
modulate = Color(0.211765, 0.109804, 0.478431, 0.47451)
z_index = 7
z_as_relative = false
scale = Vector2(5, 5)

[node name="spaceG2Pllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.6, 0.6)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(6700, 7000)

[node name="spaceGasTex2" type="Sprite2D" parent="spacePllxMngr/spaceG2Pllx"]
modulate = Color(0.639216, 1, 1, 0.47451)
z_index = 9
scale = Vector2(5, 5)

[node name="spaceSPllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.9, 0.9)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(6700, 7000)

[node name="spaceStarTex" type="Sprite2D" parent="spacePllxMngr/spaceSPllx"]
z_index = 5
scale = Vector2(5, 5)

[node name="spaceS1Pllx" type="Parallax2D" parent="spacePllxMngr"]
scroll_scale = Vector2(0.15, 0.15)
limit_begin = Vector2(-7000, -7000)
limit_end = Vector2(7000, 7000)

[node name="spaceStarTex1" type="Sprite2D" parent="spacePllxMngr/spaceS1Pllx"]
z_index = 5
scale = Vector2(3, 3)
